# template_python

./: .gitignore  Makefile  pyproject.toml
template_code/scripts/: main.py
tests/: test_sum.py
