[project]
name = "template-python"
version = "0.1.0"
description = "Python project template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
template-code = "template_code.scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["template_code"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]
